# sentinel

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  Taskfile.yml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yaml
docker/backend/: Dockerfile  requirements.txt
docker/frontend/: Dockerfile
docker/orchestration/: Dockerfile
experiments/: 00_fetch_data.py  01_eda_and_preprocessing.py  02_model_training.py  03_train_and_export.py
helm/sentinel/: values.yaml
helm/sentinel/templates/: config.yaml
helm/sentinel/templates/api/: deployment.yaml  service.yaml
helm/sentinel/templates/redis/: deployment.yaml  service.yaml
helm/sentinel/templates/redpanda/: deployment.yaml  service.yaml
helm/sentinel/templates/ui/: deployment.yaml  service.yaml
k8s/: config.yaml  namespace.yaml
k8s/api/: deployment.yaml  service.yaml
k8s/redis/: deployment.yaml  service.yaml
k8s/redpanda/: deployment.yaml  service.yaml
k8s/ui/: deployment.yaml  service.yaml
models/: fraud_xgboost.onnx  robust_scaler.joblib
orchestration/: daily_health_flow.py  data_ingestion_flow.py  master_deploy.py  model_training_flow.py
requirements/: base.txt  dev.txt  requirements.in  requirements.txt
src/api/: main.py  schemas.py
src/data/: ingestion.py
src/features/: preprocessing.py  save_scalers.py
src/inference/: consumer.py
src/ingestor/: producer.py
src/models/: trainer.py
src/ui/: app.py
src/utils/: logger.py
tests/integration/: test_api.py  test_api_logic.py
tests/performance/: redis_load.py
tests/unit/: test_model.py
