[project]
name = "sentinel"
version = "0.5.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "confluent-kafka>=2.14.0",
    "fastapi>=0.136.1",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxmltools>=1.16.0",
    "onnxruntime>=1.25.1",
    "pandas>=3.0.2",
    "prefect>=3.6.28",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
    "gdown>=6.0.0"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", "experiments", ".venv"]
skips = ["B101"]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
