[project]
name = "sentinel"
version = "0.5.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "confluent-kafka>=2.14.0",
    "fastapi>=0.136.1",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxmltools>=1.16.0",
    "onnxruntime>=1.25.1",
    "pandas>=3.0.2",
    "prefect>=3.6.28",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
    "gdown>=6.0.0"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade (upgrades syntax to newer Python versions)
    "B",   # flake8-bugbear (finds common bugs)
    "SIM", # flake8-simplify (simplifies code logic)
    "RUF", # ruff-specific rules
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", "experiments", ".venv"]
skips = ["B101"]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "mypy>=1.20.2",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "types-requests>=2.33.0.20260503",
]
